scripts/nullness/original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8.txt
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Main.java:26: error: [method.invocation] call to populateLibrary(int,int,int) not allowed on the given receiver.
    populateLibrary(numSpecies, numNodes, numBondingSites);
                   ^
  found   : @UnderInitialization(Main.class) @NonNull Main
  required: @Initialized @NonNull Main
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Main.java:30: error: [method.invocation] call to populateWorld(int,int) not allowed on the given receiver.
    populateWorld(numMolecules, numSpecies);
                 ^
  found   : @UnderInitialization(Main.class) @NonNull Main
  required: @Initialized @NonNull Main
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Main.java:34: error: [method.invocation] call to stats() not allowed on the given receiver.
    stats();
         ^
  found   : @UnderInitialization(Main.class) @NonNull Main
  required: @Initialized @NonNull Main
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Network.java:19: error: [initialization.fields.uninitialized] the constructor does not initialize fields: mol
  public Network(){
         ^
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Network.java:24: error: [assignment] incompatible types in assignment.
    nodes = null;
            ^
  found   : null (NullType)
  required: @Initialized @NonNull ArrayList<@Initialized @NonNull Node>
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Network.java:31: error: [initialization.fields.uninitialized] the constructor does not initialize fields: mol
  public Network(int numNodes){
         ^
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Network.java:42: error: [method.invocation] call to calculateCycleLength() not allowed on the given receiver.
    calculateCycleLength();
                        ^
  found   : @UnderInitialization @NonNull Network
  required: @Initialized @NonNull Network
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Network.java:43: error: [method.invocation] call to calculateActivity() not allowed on the given receiver.
    calculateActivity();
                     ^
  found   : @UnderInitialization @NonNull Network
  required: @Initialized @NonNull Network
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Network.java:48: error: [initialization.fields.uninitialized] the constructor does not initialize fields: mol
  public Network(int numNodes, int NetworkID, int numBondingSites){
         ^
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Network.java:105: error: [method.invocation] call to calculateCycleLength() not allowed on the given receiver.
    calculateCycleLength();
                        ^
  found   : @UnderInitialization @NonNull Network
  required: @Initialized @NonNull Network
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Network.java:106: error: [method.invocation] call to calculateActivity() not allowed on the given receiver.
    calculateActivity();
                     ^
  found   : @UnderInitialization @NonNull Network
  required: @Initialized @NonNull Network
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Network.java:110: error: [initialization.fields.uninitialized] the constructor does not initialize fields: mol
  public Network(ArrayList<Node> nodes, int[] bondingSites){
         ^
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Network.java:118: error: [method.invocation] call to calculateCycleLength() not allowed on the given receiver.
    calculateCycleLength();
                        ^
  found   : @UnderInitialization @NonNull Network
  required: @Initialized @NonNull Network
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Network.java:119: error: [method.invocation] call to calculateActivity() not allowed on the given receiver.
    calculateActivity();
                     ^
  found   : @UnderInitialization @NonNull Network
  required: @Initialized @NonNull Network
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Molecule.java:23: error: [assignment] incompatible types in assignment.
    children = null;
               ^
  found   : null (NullType)
  required: @Initialized @NonNull ArrayList<@Initialized @NonNull Molecule>
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Molecule.java:27: error: [method.invocation] call to toStringf() not allowed on the given receiver.
    StringID = toStringf();
                        ^
  found   : @UnderInitialization @NonNull Molecule
  required: @Initialized @NonNull Molecule
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Molecule.java:46: error: [method.invocation] call to toStringf() not allowed on the given receiver.
    StringID = toStringf();
                        ^
  found   : @UnderInitialization @NonNull Molecule
  required: @Initialized @NonNull Molecule
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Molecule.java:50: error: [initialization.fields.uninitialized] the constructor does not initialize fields: StringID
  public Molecule(Molecule M){
         ^
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Molecule.java:69: error: [assignment] incompatible types in assignment.
    children = childrenCopy;
               ^
  found   : @Initialized @Nullable ArrayList<@Initialized @NonNull Molecule>
  required: @Initialized @NonNull ArrayList<@Initialized @NonNull Molecule>
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Reaction.java:14: error: [initialization.fields.uninitialized] the constructor does not initialize fields: molReactants, molProducts
  public Reaction(Reaction R){
         ^
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Reaction.java:24: error: [initialization.fields.uninitialized] the constructor does not initialize fields: reactants, products, ID, molReactants, molProducts
  public Reaction(){
         ^
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Reaction.java:28: error: [initialization.fields.uninitialized] the constructor does not initialize fields: molReactants, molProducts
  public Reaction(int[] reactants, int[] products){
         ^
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Reaction.java:53: error: [initialization.fields.uninitialized] the constructor does not initialize fields: molReactants, molProducts
  public Reaction(int[] reactants, int[] products, Main m){
         ^
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Graph.java:24: error: [assignment] incompatible types in assignment.
      contents = null;
                 ^
  found   : null (NullType)
  required: @Initialized @NonNull Object
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Graph.java:27: error: [assignment] incompatible types in assignment.
      children = null;
                 ^
  found   : null (NullType)
  required: @Initialized @NonNull ArrayList</*RAW*/>
../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Graph.java:28: error: [assignment] incompatible types in assignment.
      parents = null;
                ^
  found   : null (NullType)
  required: @Initialized @NonNull ArrayList</*RAW*/>
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: ../original/url913d8566d1_AnsBalin_rbn_tgz-pJ8-MainJ8/src/Graph.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
26 errors
